deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-api
spec:
  selector:
    app: resume-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
